[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hookdns"
authors = [
    {name = "cle-b", email = "cle-b@tictac.pm"},
]
description="An easy way to customize the dns resolution"
readme="README.md"
urls = {repository = "https://github.com/cle-b/hookdns"}
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: Name Service (DNS)",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "hookdns.VERSION"}
